--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -73,8 +73,8 @@ jobs:
           github-token: ${{ github.token }}
           maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          signing-key: ${{ secrets.SIGNING_KEY }}
-          signing-password: ${{ secrets.SIGNING_PASSWORD }}
+          signing-key: ${{ secrets.GPG_PRIVATEKEY }}
+          signing-password: ${{ secrets.GPG_PASSPHRASE }}
   success:
     runs-on: ubuntu-24.04
     needs:
