--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -33,8 +33,8 @@ jobs:
             }}
           maven-central-username: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           maven-central-password: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          signing-key: ${{ secrets.SIGNING_KEY }}
-          signing-password: ${{ secrets.SIGNING_PASSWORD }}
+          signing-key: ${{ secrets.GPG_PRIVATEKEY }}
+          signing-password: ${{ secrets.GPG_PASSPHRASE }}
   release:
     permissions: 
       contents: write
