--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,6 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": [
-    "github>DanySK/renovate-config:kotlin"
+    "github>Collektive/renovate-config:kotlin"
   ]
 }
