--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,25 @@
 [versions]
+collektive = "11.1.3"
 kotest = "5.9.1"
 kotlin = "2.1.0"
 mockito = "5.14.2"
 
 [libraries]
+collektive = { module = "it.unibo.collektive:dsl", version.ref = "collektive" }
+collektive-compiler-embeddable = { module = "it.unibo.collektive:compiler-embeddable", version.ref = "collektive" }
+collektive-compiler-plugin = { module = "it.unibo.collektive:compiler-plugin", version.ref = "collektive" }
+kotlin-compiler-embeddable = { module = "org.jetbrains.kotlin:kotlin-compiler-embeddable", version.ref = "kotlin" }
 kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
-kotlin-stdlib-jdk8 = { module = "org.jetbrains.kotlin:kotlin-stdlib-jdk8", version.ref = "kotlin" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
 kotest-junit5-jvm = { module = "io.kotest:kotest-runner-junit5-jvm", version.ref = "kotest" }
 kotest-assertions-core-jvm = { module = "io.kotest:kotest-assertions-core-jvm", version.ref = "kotest" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockito" }
+kotlinpoet = "com.squareup:kotlinpoet:2.0.0"
+slf4j = "org.slf4j:slf4j-api:2.0.16"
 
 [bundles]
 kotlin-testing = [ "kotest-junit5-jvm", "kotest-assertions-core-jvm", "mockito-core" ]
+collektive-test = [ "collektive-compiler-plugin", "collektive-compiler-embeddable", "kotlin-compiler-embeddable"]
 
 [plugins]
 dokka = "org.jetbrains.dokka:2.0.0"
